Remove warnings for calls of Long/Integer/Boolean constructors